# CompExercise

./: CMakeLists.txt  LICENSE  README.md
modules/: modules.hpp
tests/: CMakeLists.txt  test.cpp
